# docweaver

./: .env.example  .gitignore  0_prep_db.py  0_reset_db.py  1_make_changes.py  1_prep_chunks.py  1_prep_db.py  2_search_db.py  2_update_catalog.py  3_coordinate_changes.py  3_make_changes.py  3_propose_changes.py  4_make_changes.py  5_create_diffs.py  5_make_changes.py  6_create_pr.py  README.md  helpers.py  main.py  make_changes.py  pyproject.toml  test_mcp_integration.py
logs/: diffs.log.example  doc_instructor_agent.log.example  doc_instructor_agent.log.example.json  doc_writer_agent_edits.log.example.json  doc_writer_agent_sonnet.log.example.json
outputs/: catalog.json  diffs.log.example  doc_search_agent.log.example.json  doc_writer_agent.log.example.json
src/docweaver/: agents.py  catalog.py  cli.py  config.py  db.py  helpers.py  mcp_client.py  models.py  pipeline.py  utils.py
tasks/: auth-concepts-update.json  backup.py  monitoring.py  resharding-feature.json  resharding_feature.py  spfresh-documentation.json  spfresh_documentation.py  training_deployment.py  training_indexes.py  training_monitoring.py  training_replication_sharding.py  training_schema_design.py  training_security.py  training_vector_compression.py
