[project]
name = "docweaver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chonkie>=1.3.0",
    "numpy>=2.2.6",
    "pydantic-ai>=1.0.10",
    "python-dotenv>=1.1.1",
    "weaviate-client>=4.16.10",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
