[project]
name = "docweaver"
version = "0.1.0"
description = "Agentic documentation editing tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.1.45",
    "mcp[cli]>=1.3.2",
    "pydantic-ai>=1.0.10",
    "pygithub>=2.8.1",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
